--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend_projectsetup",
   "version": "1.0.0",
-  "description": "This backend is part of project based learning of MERN backend development and thank you to our teacher Mr. Hitesh Choudhary fpr providg us value skill set.",
+  "description": "This backend is part of project based learning of MERN backend development and thank you to our teacher Mr. Hitesh Choudhary for providng us valueable skill set.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
