--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "backend_projectsetup",
   "version": "1.0.0",
   "description": "This backend is part of project based learning of MERN backend development and thank you to our teacher Mr. Hitesh Choudhary for providng us valueable skill set.",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
